[package]
name = "macd-rs"
version = "0.1.0"
authors = ["immortal infidel <immortal.infidel@gmail.com>"]
edition = "2018"
license="MIT"
description="Moving Average Convergence/Divergence (MACD) Implementation In Rust"
repository="https://github.com/immortalinfidel/macd-rs"
homepage="https://github.com/immortalinfidel/macd-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ta-common = {  version = "0.1.0" }
ema-rs = { version = "0.1.0" }
